--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # Flutter Widgets that make it easy to implement the BLoC (Business Logic Component)
+  # design pattern. Built to be used with the bloc state management package.
+  flutter_bloc: ^8.1.1
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -74,9 +79,9 @@ flutter:
   # example:
 
   fonts:
-     - family: YanoneKaffeestatz
-       fonts:
-         - asset: fonts/YanoneKaffeesatz-Regular.ttf
+    - family: YanoneKaffeestatz
+      fonts:
+        - asset: fonts/YanoneKaffeesatz-Regular.ttf
 
 
   #
