--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   # design pattern. Built to be used with the bloc state management package.
   flutter_bloc: ^8.1.1
 
+  # A Dart package that helps to implement value based equality
+  # without needing to explicitly override == and hashCode.
+  equatable: ^2.0.5
+
 
 dev_dependencies:
   flutter_test:
