Added library 'http', removed 'filter_icon.png'

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   # without needing to explicitly override == and hashCode.
   equatable: ^2.0.5
 
+  # A composable, multi-platform, Future-based API for HTTP requests.
+  http: ^0.13.5
+
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +72,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/splash_screen_image.png
-    - assets/icons/filter_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
