--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/splash_screen_image.png
+    - assets/images/coffee_link_image.png
+    - assets/images/tea_link_image.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
